--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phraseapp-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,6 @@
   "license": "Apache-2",
   "dependencies": {
     "colors": "^1.1.2",
-    "request": "^2.81.0",
-    "yamljs": "^0.2.9"
+    "request": "^2.81.0"
   }
 }
