--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,4 @@
 {
   "name": "kununu/phraseapp-cli",
-  "version": "1.0.2",
-  "description": "Phraseapp CLI Tool",
+  "description": "Phraseapp CLI Tool"
 }
