--- a/package.json
+++ b/package.json
@@ -4,12 +4,30 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "phraseapp-cli": "index.js"
+    "wat": "src/cli.js"
   },
   "author": "kununu",
-  "license": "Apache-2",
+  "license": "MIT",
+  "scripts": {
+    "test": "ava ./tests"
+  },
   "dependencies": {
+    "argparse": "1.0.9",
     "colors": "^1.1.2",
-    "request": "^2.81.0"
+    "magicli": "0.0.8",
+    "request": "^2.81.0",
+    "dotenv": "4.0.0"
+  },
+  "devDependencies": {
+    "ava": "^0.23.0",
+    "eslint": "4.10.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-import-order": "2.1.4",
+    "eslint-plugin-node": "5.2.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-promise": "3.6.0",
+    "eslint-plugin-standard": "3.0.1",
+    "prettier": "^1.7.4"
   }
 }
