add writefile helper

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "magicli": "0.0.8",
     "request": "^2.81.0",
     "dotenv": "4.0.0",
-    "node-async-loop": "1.2.2"
+    "node-async-loop": "1.2.2",
+    "mkdirp": "0.5.1"
   },
   "devDependencies": {
     "ava": "^0.23.0",
