--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "dependencies": {
     "argparse": "1.0.9",
     "colors": "^1.1.2",
-    "magicli": "0.0.8",
-    "request": "^2.81.0",
     "dotenv": "4.0.0",
+    "gettext-parser": "^1.3.0",
+    "magicli": "0.0.8",
+    "mkdirp": "0.5.1",
     "node-async-loop": "1.2.2",
-    "mkdirp": "0.5.1"
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "ava": "^0.23.0",
