--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "kununu",
   "license": "MIT",
   "scripts": {
-    "test": "ava ./tests"
+    "test": "ava ./tests",
+    "build": "rimraf ./dist && pkg . --out-path ./dist/bin",
+    "build:tux": "rimraf ./dist && pkg . --out-path ./dist/bin -t latest-linux-x86"
   },
   "dependencies": {
     "argparse": "1.0.9",
@@ -22,6 +24,8 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
+    "rimraf": "2.6.2",
+    "pkg": "4.3.0-beta.1",
     "ava": "^0.23.0",
     "eslint": "4.10.0",
     "eslint-config-standard": "10.2.1",
