--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
-    "dlvr": "4.0.4",
-    "rimraf": "2.6.2",
-    "pkg": "4.3.0-beta.1",
     "ava": "^0.23.0",
+    "dlvr": "^4.0.5",
     "eslint": "4.10.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.8.0",
@@ -36,6 +34,8 @@
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
-    "prettier": "^1.7.4"
+    "pkg": "4.3.0-beta.1",
+    "prettier": "^1.7.4",
+    "rimraf": "2.6.2"
   }
 }
