--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "ava ./tests",
     "build": "rimraf ./dist && pkg . --out-path ./dist",
-    "build:tux": "rimraf ./dist && pkg . --output ./dist/phraseapp-cli-linux -t latest-linux-x64",
+    "build:tux": "rimraf ./dist && pkg . --output ./dist/phraseapp-cli-linux -t node8-linux-x64",
     "release": "npm run build && dlvr release auto -f"
   },
   "dependencies": {
@@ -19,14 +19,12 @@
     "colors": "^1.1.2",
     "dotenv": "4.0.0",
     "gettext-parser": "^1.3.0",
-    "magicli": "0.0.8",
     "mkdirp": "0.5.1",
     "node-async-loop": "1.2.2",
     "request": "^2.81.0"
   },
   "devDependencies": {
     "ava": "^0.23.0",
-    "dlvr": "^4.0.5",
     "eslint": "4.10.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.8.0",
@@ -35,7 +33,7 @@
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
-    "pkg": "4.3.0-beta.1",
+    "pkg": "4.3.0-beta.4",
     "prettier": "^1.7.4",
     "rimraf": "2.6.2"
   }
