--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "3.0.1",
-    "pkg": "4.3.0-beta.4",
+    "pkg": "^5.6.0",
     "prettier": "^1.7.4",
     "rimraf": "2.6.2"
   }
